--- a/css/styles.css
+++ b/css/styles.css
@@ -7,26 +7,6 @@
 
 }
 
-
-.hero img{
-  width: 100%;
-  height: 400px;
-  object-fit: cover;
-  opacity: 0.3;
-    filter: alpha(opacity=15); /* For IE8 and earlier */
-}
-.hero-text{
-  position: absolute;
-  z-index: 1;
-  font-size: 50px;
-  margin-top: 70px;
-}
-.hero-img{
-  position: absolute;
-  float: center;
-  text-align: center;
-  padding: 50px;
-}
 .main-card {
   position: absolute;
   height: 400px;
@@ -37,9 +17,7 @@
   margin-top: 200px;
 }
 
-.full-width{
-  width: 100%;
-}
+
 
 .cards {
   background: #fff;
@@ -121,7 +99,7 @@ hr{
   padding-top: 70px;
 }
 .mar5top{
-  margin-top: 15px;
+  margin-top: 10px;
 }
 .heading{
   font-size: 25px;
